:see_no_evil: add eclipse, intellij, maven files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,19 @@
 # Log file
 *.log
 
+# Eclipse files
+.settings/
+.classpath
+.project
+
+# Intellij files
+.idea/
+*.iml
+
+# Maven files
+target/
+*.xml
+
 # BlueJ files
 *.ctxt
 
