using flyway + postgres db

--- a/feedback/src/main/resources/vlingo-xoom.properties
+++ b/feedback/src/main/resources/vlingo-xoom.properties
@@ -6,18 +6,18 @@ plugin.pooledCompletes.mailbox = queueMailbox
 docker.image=feedback-app
 docker.repository=xoom-application
 
-database=IN_MEMORY
-database.name=
-database.driver=
-database.url=
-database.username=
-database.password=
-database.originator=
+database=POSTGRES
+database.name=vlingo_test
+database.driver=org.postgresql.Driver
+database.url=jdbc:postgresql://[::1]:5432/
+database.username=vlingo_test
+database.password=vlingo123
+database.originator=flaxel
 
-query.database=IN_MEMORY
-query.database.name=
-query.database.driver=
-query.database.url=
-query.database.username=
-query.database.password=
-query.database.originator=
+query.database=POSTGRES
+query.database.name=vlingo_test
+query.database.driver=org.postgresql.Driver
+query.database.url=jdbc:postgresql://[::1]:5432/
+query.database.username=vlingo_test
+query.database.password=vlingo123
+query.database.originator=flaxel
