--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -20,8 +20,8 @@
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
 
-    <vlingo.version>1.3.0</vlingo.version>
-    <vlingo.xoom.version>1.3.4-SNAPSHOT</vlingo.xoom.version>
+    <vlingo.version>1.3.4-SNAPSHOT</vlingo.version>
+    <flyway.version>7.0.3</flyway.version>
 
     <junit.version>5.6.0</junit.version>
   </properties>
@@ -65,8 +65,13 @@
     <dependency>
       <groupId>io.vlingo</groupId>
       <artifactId>vlingo-xoom</artifactId>
-      <version>${vlingo.xoom.version}</version>
+      <version>${vlingo.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>${flyway.version}</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -169,7 +174,7 @@
               <path>
                 <groupId>io.vlingo</groupId>
                 <artifactId>vlingo-xoom</artifactId>
-                <version>${vlingo.xoom.version}</version>
+                <version>${vlingo.version}</version>
               </path>
             </annotationProcessorPaths>
           </configuration>
@@ -187,7 +192,7 @@
                   <path>
                     <groupId>io.vlingo</groupId>
                     <artifactId>vlingo-xoom</artifactId>
-                    <version>${vlingo.xoom.version}</version>
+                    <version>${vlingo.version}</version>
                   </path>
                 </annotationProcessorPaths>
               </configuration>
