added db settings

--- a/portfolio/src/main/resources/vlingo-xoom.properties
+++ b/portfolio/src/main/resources/vlingo-xoom.properties
@@ -7,17 +7,17 @@ docker.image=portfolio
 docker.repository=xoom-application
 
 database=POSTGRES
-database.name=
+database.name=vlingo_test
 database.driver=org.postgresql.Driver
-database.url=jdbc:postgresql://localhost/
-database.username=
-database.password=
-database.originator=
+database.url=jdbc:postgresql://[::1]:5432/
+database.username=vlingo_test
+database.password=vlingo123
+database.originator=florian
 
 query.database=POSTGRES
-query.database.name=
+query.database.name=vlingo_test
 query.database.driver=org.postgresql.Driver
-query.database.url=jdbc:postgresql://localhost/
-query.database.username=
-query.database.password=
-query.database.originator=
+query.database.url=jdbc:postgresql://[::1]:5432/
+query.database.username=vlingo_test
+query.database.password=vlingo123
+query.database.originator=florian
