--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -24,6 +24,7 @@
     <flyway.version>7.0.3</flyway.version>
 
     <junit.version>5.6.0</junit.version>
+    <mockito.version>3.5.15</mockito.version>
     <restassured.version>4.3.1</restassured.version>
   </properties>
   
@@ -84,6 +85,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
