create feedback project (#14)
* :see_no_evil: add eclipse, intellij, maven files to gitignore

* :tada: create feedback project

* :see_no_evil: update gitignore

* :sparkles: add docker compose file for database

* :sparkles: add migration script

* using flyway + postgres db

* :see_no_evil: add mac ds_store file

* :art: optimize imports

* :memo: add readme for feedback project

* :art: using new vlingo logger

* :memo: add service architecture

* :white_check_mark: add feedback resource test

create a new feedback resource test + add io.restassured

* :white_check_mark: add feedback state test

create new test for feedback state with some cases

* :white_check_mark: create feedback data test

add a new test for feedback data with some cases

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,19 @@
 # Log file
 *.log
 
+# Eclipse files
+.settings/
+.classpath
+.project
+
+# Intellij files
+.idea/
+*.iml
+
+# Maven files
+target/
+dependency-reduced-pom.xml
+
 # BlueJ files
 *.ctxt
 
@@ -21,3 +34,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Mac files
+.DS_STORE
