--- a/.github/workflows/feedback.yml
+++ b/.github/workflows/feedback.yml
@@ -2,9 +2,8 @@ name: feedback
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: 
+    - '**'
 
 jobs:
   build:
@@ -19,7 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
-        working-directory: feedback
         with:
           java-version: ${{ matrix.java }}
       - name: Spotless
