--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -23,6 +23,8 @@
     <vlingo.version>1.3.4-SNAPSHOT</vlingo.version>
     <flyway.version>7.0.3</flyway.version>
 
+    <spotless.version>2.5.0</spotless.version>
+
     <junit.version>5.6.0</junit.version>
     <mockito.version>3.5.15</mockito.version>
     <restassured.version>4.3.1</restassured.version>
@@ -213,6 +215,21 @@
               </configuration>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>${spotless.version}</version>
+          <configuration>
+            <java>
+              <removeUnusedImports/>
+
+              <googleJavaFormat>
+                <version>1.8</version>
+                <style>GOOGLE</style>
+              </googleJavaFormat>
+            </java>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
