:construction_worker: refine action rule

--- a/.github/workflows/feedback.yml
+++ b/.github/workflows/feedback.yml
@@ -2,8 +2,10 @@ name: feedback
 
 on:
   push:
-    branches: 
-    - '**'
+    branches:
+      - main
+  pull_request:
+      types: [opened, synchronize, reopened]
 
 jobs:
   build:
