--- a/stock-quote/pom.xml
+++ b/stock-quote/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>YahooFinanceAPI</artifactId>
             <version>3.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.10.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
