added stock quotes rest api

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,21 @@
 # Log file
 *.log
 
+# Eclipse files
+.settings/
+.classpath
+.project
+
+# Intellij files
+.idea/
+*.iml
+
+# Maven files
+target/
+dependency-reduced-pom.xml
+
 # BlueJ files
 *.ctxt
-
-# Eclipse
-.project
-.classpath
-.settings/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -26,3 +34,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Mac files
+.DS_STORE
