--- a/stock-quote/Dockerfile
+++ b/stock-quote/Dockerfile
@@ -1,4 +1,3 @@
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-COPY target/stock-quote-*.jar stock-quote.jar
-EXPOSE 18080
+COPY target/stock-quote-*-jar-with-dependencies.jar stock-quote.jar
 CMD java -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar stock-quote.jar
