--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,22 +12,17 @@ services:
       POSTGRES_DB: vlingo_test
       POSTGRES_USER: vlingo_test
       POSTGRES_PASSWORD: vlingo123
-  mysql:
-    image: mysql:latest
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
     volumes:
-       - vlingo_symbio_jdbc_mysql
-       - ./mysql_init.sql:/docker-entrypoint-initdb.d/mysql_init.sql
-    restart: always
-    command: mysqld --default-authentication-plugin=mysql_native_password
+      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
+      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
+      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
     ports:
-      - '3306:3306'
-    environment:
-      MYSQL_ROOT_PASSWORD: vlingo123
-      MYSQL_USER: vlingo_test
-      MYSQL_PASSWORD: vlingo123
-      MYSQL_DATABASE: vlingo_test
+      - 5672:5672
+      - 15672:15672
 
 volumes:
   vlingo_symbio_jdbc_postgres:
-  vlingo_symbio_jdbc_mysql:
     
