--- a/account/pom.xml
+++ b/account/pom.xml
@@ -13,7 +13,7 @@
     <exec.mainClass>com.whz.account.infrastructure.Bootstrap</exec.mainClass>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
-    <vlingo.xoom.version>1.3.4-SNAPSHOT</vlingo.xoom.version>
+    <vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
     <flyway.version>7.0.3</flyway.version>
   </properties>
   <repositories>
@@ -37,25 +37,25 @@
     <dependency>
       <groupId>io.vlingo</groupId>
       <artifactId>vlingo-lattice</artifactId>
-      <version>1.3.4-SNAPSHOT</version>
+      <version>${vlingo.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.vlingo</groupId>
       <artifactId>vlingo-symbio-jdbc</artifactId>
-      <version>1.3.4-SNAPSHOT</version>
+      <version>${vlingo.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.vlingo</groupId>
       <artifactId>vlingo-http</artifactId>
-      <version>1.3.4-SNAPSHOT</version>
+      <version>${vlingo.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.vlingo</groupId>
       <artifactId>vlingo-xoom</artifactId>
-      <version>${vlingo.xoom.version}</version>
+      <version>${vlingo.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
