--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -6,7 +6,7 @@
   <version>1.0.0</version>
   
   <properties>
-    <jdk.version>1.8</jdk.version>
+    <jdk.version>11</jdk.version>
     <maven.compiler.target>${jdk.version}</maven.compiler.target>
     <maven.compiler.source>${jdk.version}</maven.compiler.source>
 
@@ -20,8 +20,8 @@
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
 
-    <vlingo.version>1.3.4-SNAPSHOT</vlingo.version>
-    <flyway.version>7.0.3</flyway.version>
+    <vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
+    <rabbitmq.version>5.10.0</rabbitmq.version>
 
     <spotless.version>2.5.0</spotless.version>
 
@@ -73,10 +73,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.flywaydb</groupId>
-      <artifactId>flyway-core</artifactId>
-      <version>${flyway.version}</version>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>${rabbitmq.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
