--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -4,7 +4,21 @@
   <groupId>com.whz</groupId>
   <artifactId>feedback</artifactId>
   <version>1.0.0</version>
-  
+
+  <organization>
+    <name>Fachgruppe Informatik WHZ</name>
+    <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
+  </organization>
+  <inceptionYear>2020</inceptionYear>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <properties>
     <jdk.version>11</jdk.version>
     <maven.compiler.target>${jdk.version}</maven.compiler.target>
@@ -28,6 +42,8 @@
     <junit.version>5.6.0</junit.version>
     <mockito.version>3.5.15</mockito.version>
     <restassured.version>4.3.1</restassured.version>
+
+    <license.licenseName>mit</license.licenseName>
   </properties>
   
   <repositories>
@@ -231,6 +247,33 @@
               </googleJavaFormat>
             </java>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>2.0.0</version>
+          <configuration>
+            <verbose>false</verbose>
+            <failOnMissingHeader>true</failOnMissingHeader>
+            <includes>
+              <include>**/*.java</include>
+            </includes>
+          </configuration>
+          <executions>
+            <execution>
+              <id>generate-file-header</id>
+              <goals>
+                <goal>update-file-header</goal>
+              </goals>
+              <phase>process-sources</phase>
+              <configuration>
+                <roots>
+                  <root>src/main/java</root>
+                  <root>src/test/java</root>
+                </roots>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
