--- a/feedback/pom.xml
+++ b/feedback/pom.xml
@@ -33,6 +33,7 @@
     <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
+    <maven-license-plugin.version>2.0.0</maven-license-plugin.version>
 
     <vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
     <rabbitmq.version>5.10.0</rabbitmq.version>
@@ -251,7 +252,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>2.0.0</version>
+          <version>${maven-license-plugin.version}</version>
           <configuration>
             <verbose>false</verbose>
             <failOnMissingHeader>true</failOnMissingHeader>
