--- a/account/pom.xml
+++ b/account/pom.xml
@@ -14,6 +14,8 @@
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
     <vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
+    <rabbitmq.version>5.10.0</rabbitmq.version>
+    <junit.version>5.6.0</junit.version>
     <flyway.version>7.0.3</flyway.version>
   </properties>
   <repositories>
@@ -66,15 +68,20 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.6.0</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.6.0</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>com.rabbitmq</groupId>
+		<artifactId>amqp-client</artifactId>
+		<version>${rabbitmq.version}</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
