--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,14 @@ services:
     ports:
       - '5672:5672'
       - '15672:15672'
-  sq-publisher:
+  stock-quote-publisher:
     build: ./stock-quote/
     restart: on-failure
     environment:
       RABBITMQ_SERVICE: "rabbitmq"
       RABBITMQ_EXCHANGE: "stocks"
       RABBITMQ_EXCHANGE_TYPE: "fanout"
+      SET_RANDOM_PUBLISH_INTERVAL: "true"
 volumes:
   vlingo_symbio_jdbc_postgres:
   vlingo_symbio_jdbc_mysql:
