--- a/stock-quote/pom.xml
+++ b/stock-quote/pom.xml
@@ -12,6 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <spotless.version>2.5.0</spotless.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <yahoo-finance-api.version>3.15.0</yahoo-finance-api.version>
         <rabbitmq.version>5.10.0</rabbitmq.version>
@@ -63,5 +64,24 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.diffplug.spotless</groupId>
+                    <artifactId>spotless-maven-plugin</artifactId>
+                    <version>${spotless.version}</version>
+                    <configuration>
+                        <java>
+                            <removeUnusedImports/>
+
+                            <googleJavaFormat>
+                                <version>1.8</version>
+                                <style>GOOGLE</style>
+                            </googleJavaFormat>
+                        </java>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
