--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -19,14 +19,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-      - name: Spotless
+      - name: Spotless Check
         working-directory: portfolio
         run: mvn spotless:check
-      - name: Build database
+      - name: Build environment
         run: docker-compose up -d
       - name: Build with Maven
         working-directory: portfolio
