--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:latest
     volumes:
-       - vlingo_symbio_jdbc_postgres
+      - vlingo_symbio_jdbc_postgres
     restart: always
     ports:
       - '5432:5432'
@@ -13,16 +13,23 @@ services:
       POSTGRES_USER: vlingo_test
       POSTGRES_PASSWORD: vlingo123
   rabbitmq:
-    image: rabbitmq:3-management-alpine
-    container_name: rabbitmq
-    volumes:
-      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
-      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
-      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
-    ports:
-      - 5672:5672
-      - 15672:15672
+      image: rabbitmq:3-management-alpine
+      container_name: rabbitmq
+      volumes:
+          - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
+          - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
+          - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
+      ports:
+          - 5672:5672
+          - 15672:15672
+  stock-quote-publisher:
+    build: ./stock-quote/
+    restart: on-failure
+    environment:
+      RABBITMQ_SERVICE: "rabbitmq"
+      RABBITMQ_EXCHANGE: "stocks"
+      RABBITMQ_EXCHANGE_TYPE: "fanout"
+      SET_RANDOM_PUBLISH_INTERVAL: "true"
 
 volumes:
   vlingo_symbio_jdbc_postgres:
-    
