--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -7,6 +7,20 @@
     <artifactId>commentTone</artifactId>
     <version>1.0.0</version>
 
+    <organization>
+        <name>Fachgruppe Informatik WHZ</name>
+        <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
+    </organization>
+    <inceptionYear>2020</inceptionYear>
+
+    <licenses>
+        <license>
+            <name>Mozilla Public License 2.0</name>
+            <url>https://opensource.org/licenses/MPL-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <properties>
         <jdk.version>11</jdk.version>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
@@ -22,7 +36,7 @@
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
 
-        <vlingo.version>1.3.4-SNAPSHOT</vlingo.version>
+        <vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
         <rabbitmq.version>5.10.0</rabbitmq.version>
 
         <spotless.version>2.5.0</spotless.version>
@@ -75,6 +89,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>${rabbitmq.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
@@ -97,17 +116,6 @@
             <artifactId>rest-assured</artifactId>
             <version>${restassured.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>${rabbitmq.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.vlingo</groupId>
-            <artifactId>vlingo-symbio</artifactId>
-            <version>1.3.4-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -234,7 +242,7 @@
                     <version>${spotless.version}</version>
                     <configuration>
                         <java>
-                            <removeUnusedImports />
+                            <removeUnusedImports/>
 
                             <googleJavaFormat>
                                 <version>1.8</version>
@@ -242,6 +250,30 @@
                             </googleJavaFormat>
                         </java>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <configuration>
+                        <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
+                        <properties>
+                            <owner>${project.organization.name}</owner>
+                            <email>help.flaxel@gmail.com</email>
+                            <license.years>2020</license.years>
+                        </properties>
+                        <includes>
+                            <include>src/*/java/**/*.java</include>
+                        </includes>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>first</id>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                            <phase>process-sources</phase>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
