--- a/commentTone/src/main/resources/vlingo-xoom.properties
+++ b/commentTone/src/main/resources/vlingo-xoom.properties
@@ -1,9 +1,4 @@
-plugin.name.pooledCompletes = true
-plugin.pooledCompletes.classname = io.vlingo.actors.plugin.completes.PooledCompletesPlugin
-plugin.pooledCompletes.pool = 10
-plugin.pooledCompletes.mailbox = queueMailbox
-
-docker.image=portfolio-app
+docker.image=comment-tone-app
 docker.repository=xoom-application
 
 database=POSTGRES
