Create Account Project (#24)
* init account project

* updated Resources and Bug fixes

* added EventAdapter, changed many classes, added new properties file, fixed several bugs, updated projekt

* fixed a bug, post and put now working properly!!

* implemented all necessary variables and instantiated them

* fixed a few minor bugs; resolved a bunch of issues e.g. adding the pipeline and some plugins

* added README to account project

* fixed annoying typos in README file

* fixed typos in README v2

* applied spotless

* correct version

* improve pipeline messages

* add license header

* added subscriber for stock acquired

* fixed minor error, applied spotless

* applied license formatter

Co-authored-by: Lation <timon_schwalbe@web.de>
Co-authored-by: flaxel <falk.puschner@arcor.de>

--- a/.github/workflows/account.yml
+++ b/.github/workflows/account.yml
@@ -1,4 +1,4 @@
-name: feedback
+name: account
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
       paths:
-        - 'feedback/**'
+        - 'account/**'
 
 jobs:
   build:
@@ -24,13 +24,13 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - name: Spotless Check
-        working-directory: feedback
+        working-directory: account
         run: mvn spotless:check
       - name: License Check
-        working-directory: feedback
+        working-directory: account
         run: mvn license:check
       - name: Build environment
         run: docker-compose up -d
       - name: Build with Maven
-        working-directory: feedback
+        working-directory: account
         run: mvn -B package --file pom.xml
