Added license header and plugin

--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -7,6 +7,20 @@
     <artifactId>commentTone</artifactId>
     <version>1.0.0</version>
 
+    <organization>
+        <name>Fachgruppe Informatik WHZ</name>
+        <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
+    </organization>
+    <inceptionYear>2020</inceptionYear>
+
+    <licenses>
+        <license>
+            <name>Mozilla Public License 2.0</name>
+            <url>https://opensource.org/licenses/MPL-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <properties>
         <jdk.version>11</jdk.version>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
@@ -80,6 +94,30 @@
                             </googleJavaFormat>
                         </java>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <configuration>
+                        <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
+                        <properties>
+                            <owner>${project.organization.name}</owner>
+                            <email>help.flaxel@gmail.com</email>
+                            <license.years>2020</license.years>
+                        </properties>
+                        <includes>
+                            <include>src/*/java/**/*.java</include>
+                        </includes>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>first</id>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                            <phase>process-sources</phase>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
