--- a/commentTone/pom.xml
+++ b/commentTone/pom.xml
@@ -29,13 +29,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spotless.version>2.5.0</spotless.version>
+        <license.version>4.0.rc2</license.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <rabbitmq.version>5.10.0</rabbitmq.version>
         <gson.version>2.8.2</gson.version>
-
-        <junit.version>5.6.0</junit.version>
-        <mockito.version>3.5.15</mockito.version>
-        <restassured.version>4.3.1</restassured.version>
     </properties>
 
     <dependencies>
@@ -98,6 +95,7 @@
                 <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
+                    <version>${license.version}</version>
                     <configuration>
                         <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
                         <properties>
