Portfolio stock acquired (#33)
* init project

* removed some eclipse files

* added db settings

* added .project files from eclipse to gitignore

* removed eclipse files

* added more eclipse files to gitignore

* added readme

* first build

* added infos to the readme

* created Bootstrap server config and endpoints

* added flyway config

* modified api, added create POST method

* testing..

* refactoring

* fixed some errors

* Changed the sql migration script to create the portfolio table

* added stock quotes rest api

* :construction_worker: remove codeql pipeline

* Changed QuotesCache to enum singleton, source.getClass() fix

* Added spotless, added StockQuotePublisherDemo

* fixed pom

* Removed flyway, added fix for table creation

* changed gitignore

* :art: execute spotless apply

* removed target and .docker folder

* removed 2. gitignore, updated readme in portfolio, refactoring

* :art: execute spotless apply

* remove target folder

* remove flyway dependency

* rename portfolio variable

* remove sysouts

* update java version for portfolio pipeline

* remove sysouts + use logger

* rename method to withOwner

* add little improvements

* upgrade java version

* removed testing code from PortfolioEntity class

* Fixed GET for portfolio, created StockAcquired event

* removed the portfolio cache

* changed actor retrieving

* fixed uuid bug

* seperated stock data, added javadoc, added publisher

* add lizenz

* added markettime to stockAcquired event

* When a stock gets acquired the value of the purchase gets published to the account

* merge

* RabbitMQ params from inv variables. New JavaDoc. Refactoring

* execute spotless:apply

* add minor improvements

* add license header

* execute spotless:apply

* exception if rabbitmq env is not set.

* Removed old QuoteCache class

* execute spotless:apply

Co-authored-by: flaxel <falk.puschne

--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
   pull_request:
-      paths:
-        - 'portfolio/**'
+    paths:
+      - 'portfolio/**'
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         java: [11]
-    
+
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -26,6 +26,9 @@ jobs:
       - name: Spotless Check
         working-directory: portfolio
         run: mvn spotless:check
+      - name: License Check
+        working-directory: portfolio
+        run: mvn license:check
       - name: Build environment
         run: docker-compose up -d
       - name: Build with Maven
