--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -7,6 +7,20 @@
 	<artifactId>portfolio</artifactId>
 	<version>1.0.0</version>
 
+	<organization>
+		<name>Fachgruppe Informatik WHZ</name>
+		<url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
+	</organization>
+	<inceptionYear>2020</inceptionYear>
+
+	<licenses>
+		<license>
+			<name>Mozilla Public License 2.0</name>
+			<url>https://opensource.org/licenses/MPL-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<properties>
 		<jdk.version>11</jdk.version>
 		<maven.compiler.target>${jdk.version}</maven.compiler.target>
@@ -22,10 +36,11 @@
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
 
-		<vlingo.version>1.3.4-SNAPSHOT</vlingo.version>
+		<vlingo.version>1.4.1-SNAPSHOT</vlingo.version>
 		<rabbitmq.version>5.10.0</rabbitmq.version>
 
 		<spotless.version>2.5.0</spotless.version>
+		<license.version>4.0.rc2</license.version>
 
 		<junit.version>5.6.0</junit.version>
 		<mockito.version>3.5.15</mockito.version>
@@ -107,6 +122,31 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>${license.version}</version>
+				<configuration>
+					<header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
+					<properties>
+						<owner>${project.organization.name}</owner>
+						<email>help.flaxel@gmail.com</email>
+						<license.years>2020</license.years>
+					</properties>
+					<includes>
+						<include>src/*/java/**/*.java</include>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>first</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>process-sources</phase>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -235,6 +275,35 @@
 								<style>GOOGLE</style>
 							</googleJavaFormat>
 						</java>
+					</configuration>
+				</plugin>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.mycila</groupId>
+										<artifactId>
+											license-maven-plugin
+										</artifactId>
+										<versionRange>
+											[4.0.rc2,)
+										</versionRange>
+										<goals>
+											<goal>check</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
 			</plugins>
