Experiment feedback dockerization (#39)
* :construction_worker: update feedback pipeline

* :art: update xoom properties

* :see_no_evil: update docker ignore file

* update surefire plugin

* :truck: move sktip test to dockerfile

* :sparkles: introduce maven profiles

--- a/feedback/src/main/resources/vlingo-xoom.properties
+++ b/feedback/src/main/resources/vlingo-xoom.properties
@@ -1,7 +1,7 @@
 database=POSTGRES
 database.name=vlingo_test
 database.driver=org.postgresql.Driver
-database.url=jdbc:postgresql://postgres:5432/
+database.url=${database.url}
 database.username=vlingo_test
 database.password=vlingo123
 database.originator=flaxel
@@ -9,7 +9,7 @@ database.originator=flaxel
 query.database=POSTGRES
 query.database.name=vlingo_test
 query.database.driver=org.postgresql.Driver
-query.database.url=jdbc:postgresql://postgres:5432/
+query.database.url=${query.database.url}
 query.database.username=vlingo_test
 query.database.password=vlingo123
 query.database.originator=flaxel
