Update feedback workflow

--- a/.github/workflows/feedback.yml
+++ b/.github/workflows/feedback.yml
@@ -33,4 +33,4 @@ jobs:
         run: docker-compose up -d --build
       - name: Build with Maven
         working-directory: feedback
-        run: mvn -B package --file pom.xml
+        run: mvn -B verify --file pom.xml
