fixed a lot of bugs, changed DTO received from rabbitmq, creating account now creates a portfolio via http request, implemented MoneyInvested Event

--- a/account/pom.xml
+++ b/account/pom.xml
@@ -10,7 +10,7 @@
         <name>Fachgruppe Informatik WHZ</name>
         <url>https://www.fh-zwickau.de/pti/organisation/fachgruppe-informatik/homepage-der-fg-informatik/</url>
     </organization>
-    <inceptionYear>2020</inceptionYear>
+    <inceptionYear>2020-2021</inceptionYear>
 
     <licenses>
         <license>
@@ -256,7 +256,7 @@
                         <properties>
                             <owner>${project.organization.name}</owner>
                             <email>lationts@gmail.com</email>
-                            <license.years>2020</license.years>
+                            <license.years>2020-2021</license.years>
                         </properties>
                         <includes>
                             <include>src/*/java/**/*.java</include>
